--- a/graphicdesign.html
+++ b/graphicdesign.html
@@ -45,14 +45,14 @@
 		<div class="content-field">
 			<div class="column">
 				<div class="content-field sample">
-					<img src="Liitteet/Citymarket/Collage.png" alt="Citymarket">
-					<h3>Citymarket</h3>
-					<p>Layout design for newspaper and social media ads</p>
-				</div>
-				<div class="content-field sample">
-					<img src="Liitteet/Citycon/Collage.png" alt="Citycon">
+					<img src="Liitteet/Citycon/Collage.png" alt="">
 					<h3>Citycon</h3>
 					<p>Layout design for price canvases, media cards, name tags etc.</p>
+				</div>
+				<div class="content-field sample">
+					<img src="Liitteet/Others/Yhteisojohtaa.png" alt="">
+					<h3>Yhteisö valmentaa & johtaa</h3>
+					<p>Layout design for book advertisements</p>
 				</div>
 			</div>
 		</div>
@@ -60,12 +60,12 @@
 		<div class="content-field">
 			<div class="column">
 				<div class="content-field sample">
-					<img src="Liitteet/Staffroom/Brand.png" alt="Staffroom">
-					<h3>Staffroom</h3>
-					<p>Logo and visual brand design</p>
+					<img src="Liitteet/Citymarket/Collage.png" alt="">
+					<h3>Citymarket</h3>
+					<p>Layout design for newspaper and social media ads</p>
 				</div>
 				<div class="content-field sample">
-					<img src="Liitteet/Instrumentarium/Collage.png" alt="Instrumentarium">
+					<img src="Liitteet/Instrumentarium/Collage.png" alt="">
 					<h3>Intrumentarium</h3>
 					<p>Layout design for posters, coupons etc.</p>
 				</div>
@@ -75,11 +75,14 @@
 		<div class="content-field">
 			<div class="column">
 				<div class="content-field sample">
-					<img src="Liitteet/Others/Greenglow.png" alt="Greenglow">
+					<img src="Liitteet/Others/Greenglow.png" alt="">
 					<h3>Greenglow</h3>
 					<p>Logo and label design</p>
 				</div>
 				<div class="content-field sample">
+					<img src="Liitteet/Staffroom/Brand.png" alt="">
+					<h3>Staffroom</h3>
+					<p>Logo and visual brand design</p>
 				</div>
 			</div>
 		</div>
