--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 			<h1>Work samples</h1>
 			<div class="column">
 				<a class="card" href="prh.html">
-					<img src="Liitteet/Others/PRH.png" alt="">
+					<div class="content-field"><img src="Liitteet/Others/PRH.png" alt=""></div>
 					<div class="cardsection">
 						<div class="section">
 							<h3>Patent and Registration Office</h3>
@@ -71,7 +71,7 @@
 					</div>
 				</a>
 				<a class="card" href="graphicdesign.html">
-					<img src="Liitteet/Others/Graphicdesign.png" alt="">
+					<div class="content-field"><img src="Liitteet/Others/Graphicdesign.png" alt=""></div>
 					<div class="cardsection">
 						<div class="section">
 							<h3>Graphic design commissions</h3>
@@ -82,7 +82,7 @@
 			</div>
 			<div class="column">
 				<a class="card" href="vuorox.html">
-					<img src="Liitteet/Vuorox/Vuorox.png" alt="">
+					<div class="content-field"><img src="Liitteet/Vuorox/Vuorox.png" alt=""></div>
 					<div class="cardsection">
 						<div class="section">
 							<h3>Vuorox</h3>
@@ -91,7 +91,7 @@
 					</div>
 				</a>
 				<a class="card" href="lova.html">
-					<img src="Liitteet/Lova/Etusivu.png" alt="">
+					<div class="content-field"><img src="Liitteet/Lova/Etusivu.png" alt=""></div>
 					<div class="cardsection">
 						<div class="section">
 							<h3>Lova</h3>
