--- a/graphicdesign.html
+++ b/graphicdesign.html
@@ -45,12 +45,27 @@
 		<div class="content-field">
 			<div class="column">
 				<div class="content-field sample">
-					<img src="Liitteet/Citycon/Collage.png" alt="">
+					<div class="imageframe"><img src="Liitteet/Citymarket/Collage.png" alt=""></div>
+					<h3>Citymarket</h3>
+					<p>Layout design for newspaper and social media ads</p>
+				</div>
+				<div class="content-field sample">
+					<div class="imageframe"><img src="Liitteet/Citycon/Collage.png" alt=""></div>
 					<h3>Citycon</h3>
 					<p>Layout design for price canvases, media cards, name tags etc.</p>
 				</div>
+			</div>
+		</div>
+		
+		<div class="content-field">
+			<div class="column">
 				<div class="content-field sample">
-					<img src="Liitteet/Others/Yhteisovalmentaa.png" alt="">
+					<div class="imageframe"><img src="Liitteet/Instrumentarium/Collage.png" alt=""></div>
+					<h3>Intrumentarium</h3>
+					<p>Layout design for posters, coupons etc.</p>
+				</div>
+				<div class="content-field sample">
+					<div class="imageframe"><img src="Liitteet/Others/Yhteisovalmentaa.png" alt=""></div>
 					<h3>Yhteisö valmentaa & johtaa</h3>
 					<p>Layout design for book advertisements</p>
 				</div>
@@ -60,27 +75,12 @@
 		<div class="content-field">
 			<div class="column">
 				<div class="content-field sample">
-					<img src="Liitteet/Citymarket/Collage.png" alt="">
-					<h3>Citymarket</h3>
-					<p>Layout design for newspaper and social media ads</p>
-				</div>
-				<div class="content-field sample">
-					<img src="Liitteet/Instrumentarium/Collage.png" alt="">
-					<h3>Intrumentarium</h3>
-					<p>Layout design for posters, coupons etc.</p>
-				</div>
-			</div>
-		</div>
-		
-		<div class="content-field">
-			<div class="column">
-				<div class="content-field sample">
-					<img src="Liitteet/Others/Greenglow.png" alt="">
+					<div class="imageframe"><img src="Liitteet/Others/Greenglow.png" alt=""></div>
 					<h3>Greenglow</h3>
 					<p>Logo and label design</p>
 				</div>
 				<div class="content-field sample">
-					<img src="Liitteet/Staffroom/Brand.png" alt="">
+					<div class="imageframe"><img src="Liitteet/Staffroom/Brand.png" alt=""></div>
 					<h3>Staffroom</h3>
 					<p>Logo and visual brand design</p>
 				</div>
