--- a/vuorox.html
+++ b/vuorox.html
@@ -44,7 +44,7 @@
 					</div>
 				</div>				
 				<div class="content-field">
-					<div class="imageframe"><img src="Liitteet/Vuorox/Vuorox.png" alt=""></div>
+					<div class="imageframe" style="height: -webkit-fill-available;"><img src="Liitteet/Vuorox/Vuorox.png" alt=""></div>
 				</div>
 			</div>
 		</div>
