--- a/index.html
+++ b/index.html
@@ -70,6 +70,35 @@
 						</div>
 					</div>
 				</a>
+				<a class="card" href="ellibs.html">
+					<div class="imageframe"><img src="Liitteet/Ellibs/Ellibs.png" alt=""></div>
+					<div class="cardsection">
+						<div class="section">
+							<h3>Ellibs</h3>
+							<p>UX and UI design</p>
+						</div>
+					</div>
+				</a>
+			</div>
+			<div class="column">
+				<a class="card" href="graphicdesign.html">
+					<div class="imageframe"><img src="Liitteet/Others/Graphicdesign.png" alt=""></div>
+					<div class="cardsection">
+						<div class="section">
+							<h3>Graphic design commissions</h3>
+							<p>Layout, logo and brand design</p>
+						</div>
+					</div>
+				</a>
+				<a class="card" href="vuorox.html">
+					<div class="imageframe"><img src="Liitteet/Vuorox/Vuorox.png" alt=""></div>
+					<div class="cardsection">
+						<div class="section">
+							<h3>Vuorox</h3>
+							<p>UX and UI Design</p>
+						</div>
+					</div>
+				</a>
 				<a class="card" href="graphicdesign.html">
 					<div class="imageframe"><img src="Liitteet/Others/Graphicdesign.png" alt=""></div>
 					<div class="cardsection">
@@ -81,15 +110,6 @@
 				</a>
 			</div>
 			<div class="column">
-				<a class="card" href="vuorox.html">
-					<div class="imageframe"><img src="Liitteet/Vuorox/Vuorox.png" alt=""></div>
-					<div class="cardsection">
-						<div class="section">
-							<h3>Vuorox</h3>
-							<p>UX and UI Design</p>
-						</div>
-					</div>
-				</a>
 				<a class="card" href="lova.html">
 					<div class="imageframe"><img src="Liitteet/Lova/Etusivu.png" alt=""></div>
 					<div class="cardsection">
@@ -99,6 +119,7 @@
 						</div>
 					</div>
 				</a>
+				<div class="content-field"></div>
 			</div>
 		</div>
 
