--- a/ellibs.html
+++ b/ellibs.html
@@ -45,7 +45,7 @@
 					</div>
 				</div>
 				<div class="content-field">
-					<div class="imageframe" style="height: -webkit-fill-available;"><img src="Liitteet/Ellibs/Ellibs.png" alt=""></div>
+					<div class="imageframe" style="height: -webkit-fill-available; padding-top: 0; padding-bottom: 0;"><img src="Liitteet/Ellibs/Ellibs.png" alt=""></div>
 				</div>
 			</div>
 		</div>
